Background image auto change

--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-    background: url(../WeatherApp/weatherImage/Sunny.jpg);
+    /*background: url(../WeatherApp/weatherImage/Sunny.jpg);*/
     background-color: silver;
 }
 
